--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -123,7 +123,6 @@
         "preferences-notifications": "Notification preferences{{pageTitleSuffix}}",
         "privacy": "Privacy Statement{{pageTitleSuffix}}",
         "product": "Offer - {{product_name}} of {{organization_name}}{{pageTitleSuffix}}",
-        "products": "Offer{{fund_name}}{{pageTitleSuffix}}",
         "products-apply": "Buy Offer{{pageTitleSuffix}}",
         "products-show": "Offer{{pageTitleSuffix}}",
         "provider": "Provider - {{provider_name}}{{pageTitleSuffix}}",
@@ -148,7 +147,8 @@
         "start": "Start sign in{{pageTitleSuffix}}",
         "terms_and_conditions": "General conditions{{pageTitleSuffix}}",
         "voucher": "Your credit - {{fund_name}}{{pageTitleSuffix}}",
-        "vouchers": "My credit{{pageTitleSuffix}}"
+        "vouchers": "My credit{{pageTitleSuffix}}",
+        "products": "Offer{{pageTitleSuffix}}"
     },
     "page_title": "Forus platform",
     "test": "{{name}} {{foo}}",
@@ -1357,8 +1357,8 @@
             "map_title": "Select a provider for more information",
             "provider_type": "Type of provider",
             "result": "There are <div class=\"showcase-result-count\">{{ total }}</div> providers found.",
-            "search": "Search",
-            "sort": "Sort"
+            "sort": "Sort",
+            "search": "Find provider"
         },
         "items": {
             "labels": {
@@ -3236,12 +3236,12 @@
                 "title": "Block your pass"
             },
             "link_card": {
-                "description": "On your pass is a QR code, below is your personal code.<br/>If you reactivate the old pass you can continue to use it.<br/>Need help?  Call 14 050 Monday through Friday 9 a.m. to noon.",
                 "subtitle": "Enter your personal customer code",
                 "title": "Activate your old pass",
                 "alt_text": "Physical Pass: {{ fund_name }}",
                 "no_old_card": "No old pass?",
-                "order_card": "Order a pass"
+                "order_card": "Order a pass",
+                "description": "There is a personal code on your pass. Enter it below.<br/>If you reactivate the old pass you can continue to use it."
             },
             "request_card_success": {
                 "description": "You have received an email confirming your order.",
