--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -3649,5 +3649,9 @@
             "archive": "Архив"
         },
         "title": "Физический пропуск"
+    },
+    "block_product_categories": {
+        "description": "Нажмите на тему, и вы сразу увидите, какое предложение вы можете выбрать.",
+        "title": "Чем вы любите заниматься?"
     }
 }
