--- a/react/src/webshop/i18n/translated/tr.json
+++ b/react/src/webshop/i18n/translated/tr.json
@@ -3649,5 +3649,9 @@
             "archive": "Arşiv"
         },
         "title": "Fiziksel geçiş"
+    },
+    "block_product_categories": {
+        "description": "Bir temaya tıkladığınızda hangi teklifler arasından seçim yapabileceğinizi hemen göreceksiniz.",
+        "title": "Ne yapmaktan hoşlanırsın?"
     }
 }
