--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -3649,5 +3649,9 @@
             "archive": "الأرشيف"
         },
         "title": "البطاقة البدنية"
+    },
+    "block_product_categories": {
+        "description": "انقر على سمة وسترى على الفور العرض الذي يمكنك الاختيار من بينها.",
+        "title": "ماذا تحب أن تفعل؟"
     }
 }
