--- a/react/src/webshop/i18n/translated/fr.json
+++ b/react/src/webshop/i18n/translated/fr.json
@@ -3649,5 +3649,9 @@
             "archive": "Archives"
         },
         "title": "Passe physique"
+    },
+    "block_product_categories": {
+        "description": "Cliquez sur un thème et vous verrez immédiatement l'offre que vous pouvez choisir.",
+        "title": "Qu'aimez-vous faire ?"
     }
 }
