--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -3649,5 +3649,9 @@
             "archive": "Архів"
         },
         "title": "Фізична перепустка"
+    },
+    "block_product_categories": {
+        "description": "Натисніть на тему, і ви одразу побачите, з яких пропозицій ви можете вибрати.",
+        "title": "Чим ви любите займатися?"
     }
 }
