--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -2311,12 +2311,6 @@
             "title": "Места на карте"
         },
         "no_vouchers": "У вас нет кредита, чтобы зарезервировать это предложение",
-        "status": {
-            "active": "Активный",
-            "free": "Бесплатно",
-            "no_data": "Нет данных",
-            "out_of_stock": "Больше никаких акций"
-        },
         "tooltip": "Сколько еще раз вы можете воспользоваться этим предложением",
         "price": {
             "free": "Бесплатно",
@@ -3289,44 +3283,11 @@
         "card": {
             "activate_my_pass": "Активируйте мой пропуск",
             "cancel": "Отмена",
-            "delete": "Отменить бронирование",
-            "expire": "Действует до:",
-            "expired": "Просроченный",
-            "footer": {
-                "actions": {
-                    "mail": "Отправить по электронной почте",
-                    "open_in_me": "Открыть в приложении",
-                    "physical_card_use": "Пластиковый пропуск",
-                    "print": "Печать",
-                    "share": "Поделитесь с поставщиком"
-                },
-                "tooltips": {
-                    "mail": "Отправьте кредит себе по электронной почте",
-                    "open_in_me": "Я",
-                    "print": "Распечатайте кредит",
-                    "share": "Разделите кредит с поставщиком"
-                }
-            },
             "header": {
                 "title": "Как это работает?"
             },
-            "labels": {
-                "contact_provider": "У вас есть вопросы по поводу этого предложения? Если да, пожалуйста, свяжитесь с нами.",
-                "contact_sponsor": "Есть вопросы? Свяжитесь с нами.",
-                "description": "1.<br/><br/>Нажмите на \"Предложение\", выберите и забронируйте мероприятие. ИЛИ 2. Отнесите QR-код поставщику услуг. Поставщик услуг отсканирует QR-код и забронирует ваше мероприятие.",
-                "email": "Адрес электронной почты:",
-                "phone": "Номер телефона:"
-            },
             "lost_my_pass": "Я потерял пропуск.",
-            "qrcode": {
-                "productdescription": "Это ваша бронь с QR-кодом.",
-                "description": "Это ваш кредит {{fund_name}} с QR-кодом."
-            },
-            "share": "Поделиться",
-            "stop_participation": "Прекратить участие",
-            "used": "Подержанные",
-            "used_on": "Используется на",
-            "valid_until": "Действует до"
+            "stop_participation": "Прекратить участие"
         },
         "delete_voucher": {
             "buttons": {
@@ -3346,19 +3307,8 @@
             "title": "Расходы"
         },
         "labels": {
-            "add": "На сайте",
-            "expire": "Действует до:",
-            "fund": "Фонд",
-            "info": "<span style='font-style: italic;'>Ищете поставщика услуг, которого нет на карте? Вы можете попросить поставщика услуг принять участие в программе. Поставщик может подать заявку в течение года.</span>",
-            "offers": "Хотите получить информацию о полном предложении? Тогда свяжитесь с поставщиком.",
             "office": "Места, где можно выкупить эту бронь.",
-            "offices": "Провайдеры",
-            "productdetail": "Информация о поставках",
-            "requirements": "Для получения информации о правилах и условиях данного предложения обратитесь к поставщику.",
-            "shopdetail": "Информация о поставщике",
-            "subtract": "С сайта",
-            "transactions": "Расходы",
-            "voucher": "Распечатайте кредит или отправьте его себе по почте. Отнесите QR-код поставщику услуг и отсканируйте его."
+            "offices": "Провайдеры"
         },
         "physical_card": {
             "buttons": {
@@ -3367,15 +3317,7 @@
             },
             "card_number": "Номер пропуска",
             "title": "Активируйте мой пропуск",
-            "less_details": "Скрыть все детали",
-            "more_details": "Показать все детали",
-            "personal_date": "Персональные данные",
             "alt": "Физический пропуск: '{{ title }}'"
-        },
-        "reimbursement": {
-            "button": "Отправить купон",
-            "description": "Возместите понесенные расходы, отправив данные о покупке и счет или квитанцию.",
-            "title": "Возмещение затрат"
         },
         "share_voucher": {
             "buttons": {
@@ -3410,25 +3352,6 @@
             "title": "Транзакции",
             "top_up": "Обновленный",
             "expired_on": "Срок действия истек {{ date }}"
-        },
-        "card_combined": {
-            "header": {
-                "title": "Как это работает?"
-            },
-            "labels": {
-                "contact_sponsor": "Есть вопросы?",
-                "contact_sponsor_details": "Тогда свяжитесь с нами.",
-                "how_it_works": "Мы получили ваше заявление. Решение по вашему заявлению будет принято в течение 8 недель.",
-                "IIT": {
-                    "how_it_works": "Мы получили ваше заявление. Решение по вашему заявлению будет принято в течение 8 недель.",
-                    "redirect_to": "Вы все еще хотите подать заявку на возмещение?"
-                },
-                "meedoenregeling_volwassenen_ww": {
-                    "how_it_works": "Вы понесли расходы, которые подпадают под эту схему? Заявите о возмещении расходов, предоставив квитанцию. После одобрения вы получите сумму на свой личный банковский счет.",
-                    "redirect_to": "Затраты на восстановление?"
-                },
-                "redirect_to": "Вы все еще хотите подать заявку на возмещение?"
-            }
         },
         "actions": {
             "choose_action": {
