--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -1870,12 +1870,6 @@
             "title": "المواقع على الخريطة"
         },
         "no_vouchers": "ليس لديك رصيد لحجز هذا العرض مع",
-        "status": {
-            "active": "نشط",
-            "free": "مجاناً",
-            "no_data": "لا توجد بيانات",
-            "out_of_stock": "لا مزيد من المخزون"
-        },
         "tooltip": "كم مرة أخرى يمكنك الاستفادة من هذا العرض",
         "price": {
             "free": "مجاناً",
@@ -1954,44 +1948,11 @@
         "card": {
             "activate_my_pass": "تفعيل بطاقتي",
             "cancel": "إلغاء",
-            "delete": "إلغاء الحجز",
-            "expire": "صالحة حتى:",
-            "expired": "منتهية الصلاحية",
-            "footer": {
-                "actions": {
-                    "mail": "أرسل لي بريد إلكتروني",
-                    "open_in_me": "فتح في التطبيق",
-                    "physical_card_use": "ممر بلاستيكي",
-                    "print": "الطباعة",
-                    "share": "المشاركة مع المزود"
-                },
-                "tooltips": {
-                    "mail": "أرسل الرصيد لنفسك عبر البريد الإلكتروني",
-                    "open_in_me": "أنا",
-                    "print": "اطبع الرصيد",
-                    "share": "مشاركة الرصيد مع المزود"
-                }
-            },
             "header": {
                 "title": "كيف تعمل؟"
             },
-            "labels": {
-                "contact_provider": "هل لديك أي أسئلة حول هذا العرض؟ إذا كان الأمر كذلك، يُرجى الاتصال بنا.",
-                "contact_sponsor": "هل لديك أي أسئلة؟ اتصل بنا",
-                "description": "1.<br/><br/>انقر على العرض واختر النشاط واحجزه. أو 2. خذ رمز الاستجابة السريعة إلى مقدم الخدمة. سيقوم مقدم الخدمة بمسح رمز الاستجابة السريعة وحجز نشاطك.",
-                "email": "عنوان البريد الإلكتروني",
-                "phone": "رقم الهاتف"
-            },
             "lost_my_pass": "لقد فقدت بطاقتي",
-            "qrcode": {
-                "productdescription": "هذا هو حجزك مع رمز الاستجابة السريعة.",
-                "description": "هذا هو رصيدك {{fund_name}} الخاص بك مع رمز الاستجابة السريعة."
-            },
-            "share": "شارك",
-            "stop_participation": "إيقاف المشاركة",
-            "used": "مستعمل",
-            "used_on": "مستخدمة على",
-            "valid_until": "صالحة حتى"
+            "stop_participation": "إيقاف المشاركة"
         },
         "delete_voucher": {
             "buttons": {
@@ -2011,19 +1972,8 @@
             "title": "النفقات"
         },
         "labels": {
-            "add": "في",
-            "expire": "صالحة حتى:",
-            "fund": "الصندوق",
-            "info": "<span style='font-style: italic;'>هل تبحث عن مقدم خدمة غير موجود على الخريطة؟ يمكنك أن تطلب من مقدم الخدمة المشاركة. يمكن لمقدم الخدمة التقديم على مدار العام.</span>",
-            "offers": "هل ترغب في الحصول على معلومات عن العرض الكامل؟ إذن اتصل بمقدم الخدمة.",
             "office": "المواقع التي يمكنك فيها استرداد هذا الحجز.",
-            "offices": "المزودون",
-            "productdetail": "معلومات التوريد",
-            "requirements": "للاطلاع على شروط وأحكام هذا العرض اتصل بمزود الخدمة.",
-            "shopdetail": "معلومات المزود",
-            "subtract": "إيقاف التشغيل",
-            "transactions": "النفقات",
-            "voucher": "اطبع رصيدك أو أرسله لنفسك بالبريد. خذ رمز الاستجابة السريعة إلى مقدم الخدمة وقم بمسحه ضوئياً."
+            "offices": "المزودون"
         },
         "physical_card": {
             "buttons": {
@@ -2032,15 +1982,7 @@
             },
             "card_number": "رقم المرور",
             "title": "تفعيل بطاقتي",
-            "less_details": "إخفاء جميع التفاصيل",
-            "more_details": "إظهار كل التفاصيل",
-            "personal_date": "البيانات الشخصية",
             "alt": "المرور الفعلي: '{{ title }}'"
-        },
-        "reimbursement": {
-            "button": "إرسال القسيمة",
-            "description": "استرد التكاليف المتكبدة عن طريق إرسال تفاصيل عملية الشراء والفاتورة أو الإيصال.",
-            "title": "استرداد التكاليف"
         },
         "share_voucher": {
             "buttons": {
@@ -2075,25 +2017,6 @@
             "title": "المعاملات",
             "top_up": "ترقية",
             "expired_on": "انتهت صلاحيتها في {{ date }}"
-        },
-        "card_combined": {
-            "header": {
-                "title": "كيف تعمل؟"
-            },
-            "labels": {
-                "contact_sponsor": "هل لديك أي أسئلة؟",
-                "contact_sponsor_details": "اتصل بنا إذاً.",
-                "how_it_works": "لقد استلمنا طلبك. سوف تتلقى قراراً بشأن طلبك في غضون 8 أسابيع.",
-                "IIT": {
-                    "how_it_works": "لقد استلمنا طلبك. سوف تتلقى قراراً بشأن طلبك في غضون 8 أسابيع.",
-                    "redirect_to": "هل ما زلت ترغب في التقدم بطلب للحصول على تعويض؟"
-                },
-                "meedoenregeling_volwassenen_ww": {
-                    "how_it_works": "هل تكبدت نفقات تندرج ضمن هذا النظام؟ طالب باسترداد نفقاتك من خلال تقديم إيصال. بعد الموافقة، ستحصل على المبلغ في حسابك المصرفي الشخصي.",
-                    "redirect_to": "تكاليف الاسترداد؟"
-                },
-                "redirect_to": "هل ما زلت ترغب في التقدم بطلب للحصول على تعويض؟"
-            }
         },
         "actions": {
             "choose_action": {
