--- a/react/src/webshop/i18n/translated/fr.json
+++ b/react/src/webshop/i18n/translated/fr.json
@@ -2311,12 +2311,6 @@
             "title": "Localisation sur la carte"
         },
         "no_vouchers": "Vous ne disposez d'aucun crédit pour réserver cette offre auprès de",
-        "status": {
-            "active": "Actif",
-            "free": "Gratuit",
-            "no_data": "Pas de données",
-            "out_of_stock": "Plus de stock"
-        },
         "tooltip": "Combien de fois encore pouvez-vous profiter de cette offre ?",
         "price": {
             "free": "Gratuit",
@@ -3289,44 +3283,11 @@
         "card": {
             "activate_my_pass": "Activer mon pass",
             "cancel": "Annuler",
-            "delete": "Annuler la réservation",
-            "expire": "Valable jusqu'au :",
-            "expired": "Expiré",
-            "footer": {
-                "actions": {
-                    "mail": "Envoyez-moi un courriel",
-                    "open_in_me": "Ouvrir dans l'application",
-                    "physical_card_use": "Passe en plastique",
-                    "print": "Imprimer",
-                    "share": "Partager avec le fournisseur"
-                },
-                "tooltips": {
-                    "mail": "Envoyez le crédit par courriel à vous-même",
-                    "open_in_me": "Moi",
-                    "print": "Imprimer le crédit",
-                    "share": "Partager le mérite avec le fournisseur"
-                }
-            },
             "header": {
                 "title": "Comment cela fonctionne-t-il ?"
             },
-            "labels": {
-                "contact_provider": "Vous avez des questions sur cette offre ? Si c'est le cas, veuillez nous contacter.",
-                "contact_sponsor": "Vous avez des questions ? Contactez nous.",
-                "description": "1.<br/><br/>Cliquez sur Offre, choisissez et réservez une activité OU 2. Apportez le code QR au prestataire. Le prestataire scannera le code QR et réservera votre activité.",
-                "email": "Adresse électronique :",
-                "phone": "Numéro de téléphone :"
-            },
             "lost_my_pass": "J'ai perdu mon laissez-passer",
-            "qrcode": {
-                "productdescription": "Il s'agit de votre réservation avec un code QR.",
-                "description": "Il s'agit de votre crédit {{fund_name}} avec un code QR."
-            },
-            "share": "Partager",
-            "stop_participation": "Arrêter la participation",
-            "used": "Utilisé",
-            "used_on": "Utilisé le",
-            "valid_until": "Valable jusqu'à"
+            "stop_participation": "Arrêter la participation"
         },
         "delete_voucher": {
             "buttons": {
@@ -3346,19 +3307,8 @@
             "title": "Dépenses"
         },
         "labels": {
-            "add": "Au",
-            "expire": "Valable jusqu'au :",
-            "fund": "Fonds",
-            "info": "<span style='font-style: italic;'>Vous cherchez un fournisseur qui ne figure pas sur la carte ? Vous pouvez demander à un prestataire de participer. Un prestataire peut poser sa candidature tout au long de l'année.</span>",
-            "offers": "Vous souhaitez obtenir des informations sur l'offre complète ? Contactez le fournisseur.",
             "office": "Lieux où vous pouvez utiliser cette réservation.",
-            "offices": "Fournisseurs",
-            "productdetail": "Informations sur les fournitures",
-            "requirements": "Pour connaître les conditions de cette offre, contactez le fournisseur.",
-            "shopdetail": "Informations sur le fournisseur",
-            "subtract": "Arrêt",
-            "transactions": "Dépenses",
-            "voucher": "Imprimez votre crédit ou envoyez-le par la poste. Apportez le code QR au fournisseur et faites-le scanner."
+            "offices": "Fournisseurs"
         },
         "physical_card": {
             "buttons": {
@@ -3367,15 +3317,7 @@
             },
             "card_number": "Numéro de passage",
             "title": "Activer mon pass",
-            "less_details": "Cacher tous les détails",
-            "more_details": "Afficher tous les détails",
-            "personal_date": "Données personnelles",
             "alt": "Passe physique : '{{ title }}'"
-        },
-        "reimbursement": {
-            "button": "Soumettre un coupon",
-            "description": "Récupérez les frais encourus en envoyant les détails de votre achat et la facture ou le reçu.",
-            "title": "Recouvrement des coûts"
         },
         "share_voucher": {
             "buttons": {
@@ -3410,25 +3352,6 @@
             "title": "Transactions",
             "top_up": "Mise à niveau",
             "expired_on": "Expiré le {{ date }}"
-        },
-        "card_combined": {
-            "header": {
-                "title": "Comment cela fonctionne-t-il ?"
-            },
-            "labels": {
-                "contact_sponsor": "Des questions ?",
-                "contact_sponsor_details": "Dans ce cas, contactez-nous.",
-                "how_it_works": "Nous avons reçu votre demande. Vous recevrez une décision concernant votre demande dans un délai de 8 semaines.",
-                "IIT": {
-                    "how_it_works": "Nous avons reçu votre demande. Vous recevrez une décision concernant votre demande dans un délai de 8 semaines.",
-                    "redirect_to": "Souhaitez-vous toujours demander un remboursement ?"
-                },
-                "meedoenregeling_volwassenen_ww": {
-                    "how_it_works": "Vous avez engagé des dépenses qui relèvent de ce régime ? Demandez le remboursement de vos dépenses en présentant un justificatif. Après approbation, vous recevrez le montant sur votre compte bancaire personnel.",
-                    "redirect_to": "Coûts de récupération ?"
-                },
-                "redirect_to": "Souhaitez-vous toujours demander un remboursement ?"
-            }
         },
         "actions": {
             "choose_action": {
