--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -2311,12 +2311,6 @@
             "title": "Lokalizacje na mapie"
         },
         "no_vouchers": "Nie masz kredytu, aby zarezerwować tę ofertę",
-        "status": {
-            "active": "Aktywny",
-            "free": "Darmowy",
-            "no_data": "Brak danych",
-            "out_of_stock": "Koniec z zapasami"
-        },
         "tooltip": "Ile razy jeszcze możesz skorzystać z tej oferty?",
         "price": {
             "free": "Darmowy",
@@ -3289,44 +3283,11 @@
         "card": {
             "activate_my_pass": "Aktywuj moją przepustkę",
             "cancel": "Anuluj",
-            "delete": "Anuluj rezerwację",
-            "expire": "Ważne do:",
-            "expired": "Wygasł",
-            "footer": {
-                "actions": {
-                    "mail": "Email do mnie",
-                    "open_in_me": "Otwórz w aplikacji",
-                    "physical_card_use": "Plastikowa przepustka",
-                    "print": "Drukuj",
-                    "share": "Udostępnianie dostawcy"
-                },
-                "tooltips": {
-                    "mail": "Wyślij kredyt do siebie pocztą e-mail",
-                    "open_in_me": "Ja",
-                    "print": "Wydrukuj kredyt",
-                    "share": "Podziel się kredytem z dostawcą"
-                }
-            },
             "header": {
                 "title": "Jak to działa?"
             },
-            "labels": {
-                "contact_provider": "Czy masz jakieś pytania dotyczące tej oferty? Jeśli tak, prosimy o kontakt.",
-                "contact_sponsor": "Masz pytania? Skontaktuj się z nami.",
-                "description": "1.<br/><br/>Kliknij Ofertę, wybierz i zarezerwuj aktywność. LUB 2. Zabierz kod QR do dostawcy. Dostawca zeskanuje kod QR i zarezerwuje aktywność.",
-                "email": "Adres e-mail:",
-                "phone": "Numer telefonu:"
-            },
             "lost_my_pass": "Straciłem przepustkę",
-            "qrcode": {
-                "productdescription": "Jest to rezerwacja z kodem QR.",
-                "description": "Jest to kredyt {{fund_name}} z kodem QR."
-            },
-            "share": "Udział",
-            "stop_participation": "Zaprzestanie uczestnictwa",
-            "used": "Używany",
-            "used_on": "Używany na",
-            "valid_until": "Ważne do"
+            "stop_participation": "Zaprzestanie uczestnictwa"
         },
         "delete_voucher": {
             "buttons": {
@@ -3346,19 +3307,8 @@
             "title": "Wydatki"
         },
         "labels": {
-            "add": "Przy",
-            "expire": "Ważne do:",
-            "fund": "Fundusz",
-            "info": "<span style='font-style: italic;'>Szukasz dostawcy, którego nie ma na mapie? Możesz poprosić dostawcę o udział. Dostawca może składać wnioski przez cały rok.</span>",
-            "offers": "Chcesz uzyskać informacje na temat pełnej oferty? Skontaktuj się z dostawcą.",
             "office": "Lokalizacje, w których można zrealizować rezerwację.",
-            "offices": "Dostawcy",
-            "productdetail": "Informacje o dostawie",
-            "requirements": "Aby zapoznać się z warunkami tej oferty, należy skontaktować się z dostawcą.",
-            "shopdetail": "Informacje o dostawcy",
-            "subtract": "Wył.",
-            "transactions": "Wydatki",
-            "voucher": "Wydrukuj swój kredyt lub wyślij go sobie pocztą. Zanieś kod QR do dostawcy usług i zeskanuj go."
+            "offices": "Dostawcy"
         },
         "physical_card": {
             "buttons": {
@@ -3367,15 +3317,7 @@
             },
             "card_number": "Numer przepustki",
             "title": "Aktywuj moją przepustkę",
-            "less_details": "Ukryj wszystkie szczegóły",
-            "more_details": "Pokaż wszystkie szczegóły",
-            "personal_date": "Dane osobowe",
             "alt": "Przepustka fizyczna: '{{ title }}'"
-        },
-        "reimbursement": {
-            "button": "Prześlij kupon",
-            "description": "Odzyskaj poniesione koszty, przesyłając szczegóły zakupu oraz rachunek lub paragon.",
-            "title": "Zwrot kosztów"
         },
         "share_voucher": {
             "buttons": {
@@ -3410,25 +3352,6 @@
             "title": "Transakcje",
             "top_up": "Ulepszony",
             "expired_on": "Wygasł w dniu {{ date }}"
-        },
-        "card_combined": {
-            "header": {
-                "title": "Jak to działa?"
-            },
-            "labels": {
-                "contact_sponsor": "Jakieś pytania?",
-                "contact_sponsor_details": "Następnie skontaktuj się z nami.",
-                "how_it_works": "Otrzymaliśmy Twoje zgłoszenie. Decyzję w sprawie wniosku otrzymasz w ciągu 8 tygodni.",
-                "IIT": {
-                    "how_it_works": "Otrzymaliśmy Twoje zgłoszenie. Decyzję w sprawie wniosku otrzymasz w ciągu 8 tygodni.",
-                    "redirect_to": "Czy nadal chcesz ubiegać się o zwrot kosztów?"
-                },
-                "meedoenregeling_volwassenen_ww": {
-                    "how_it_works": "Czy poniosłeś wydatki objęte tym programem? Złóż wniosek o zwrot wydatków, przedstawiając paragon. Po zatwierdzeniu otrzymasz kwotę na swoje osobiste konto bankowe.",
-                    "redirect_to": "Odzyskać koszty?"
-                },
-                "redirect_to": "Czy nadal chcesz ubiegać się o zwrot kosztów?"
-            }
         },
         "actions": {
             "choose_action": {
