--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -2311,12 +2311,6 @@
             "title": "Розташування на карті"
         },
         "no_vouchers": "У вас немає кредиту, щоб забронювати цю пропозицію",
-        "status": {
-            "active": "Активний",
-            "free": "Безкоштовно",
-            "no_data": "Немає даних",
-            "out_of_stock": "Запасів більше немає"
-        },
         "tooltip": "Скільки разів ви можете скористатися цією пропозицією",
         "price": {
             "free": "Безкоштовно",
@@ -3289,44 +3283,11 @@
         "card": {
             "activate_my_pass": "Активуйте мій пропуск",
             "cancel": "Скасувати",
-            "delete": "Скасувати бронювання",
-            "expire": "Дійсний до:",
-            "expired": "Закінчився",
-            "footer": {
-                "actions": {
-                    "mail": "Напишіть мені",
-                    "open_in_me": "Відкрити в додатку",
-                    "physical_card_use": "Пластикова перепустка",
-                    "print": "Друк",
-                    "share": "Поділіться з провайдером"
-                },
-                "tooltips": {
-                    "mail": "Надішліть кредит собі на електронну пошту",
-                    "open_in_me": "Я",
-                    "print": "Роздрукуйте кредит",
-                    "share": "Розділіть кредит з провайдером"
-                }
-            },
             "header": {
                 "title": "Як це працює?"
             },
-            "labels": {
-                "contact_provider": "У вас виникли запитання щодо цієї пропозиції? Якщо так, будь ласка, зв'яжіться з нами.",
-                "contact_sponsor": "Є питання? Зв'яжіться з нами.",
-                "description": "1.<br/><br/>Натисніть на Пропозицію, оберіть та забронюйте заняття. АБО 2. Віднеси QR-код провайдеру. Провайдер відсканує QR-код і зарезервує ваше заняття.",
-                "email": "Адреса електронної пошти:",
-                "phone": "Номер телефону:"
-            },
             "lost_my_pass": "Я загубив перепустку.",
-            "qrcode": {
-                "productdescription": "Це ваше бронювання з QR-кодом.",
-                "description": "Це ваш кредит {{fund_name}} з QR-кодом."
-            },
-            "share": "Поділіться",
-            "stop_participation": "Припинити участь",
-            "used": "Б/в",
-            "used_on": "Використовується на",
-            "valid_until": "Дійсно до"
+            "stop_participation": "Припинити участь"
         },
         "delete_voucher": {
             "buttons": {
@@ -3346,19 +3307,8 @@
             "title": "Витрати"
         },
         "labels": {
-            "add": "За адресою",
-            "expire": "Дійсний до:",
-            "fund": "Фонд",
-            "info": "<span style='font-style: italic;'>Шукаєте лікаря, якого немає на карті? Ви можете попросити його взяти участь у конкурсі. Подати заявку можна протягом усього року.</span>",
-            "offers": "Хочете отримати інформацію про повну пропозицію? Тоді зв'яжіться з провайдером.",
             "office": "Де ви можете викупити це бронювання.",
-            "offices": "Провайдери",
-            "productdetail": "Інформація про постачання",
-            "requirements": "За умовами цієї пропозиції звертайтеся до провайдера.",
-            "shopdetail": "Інформація про постачальника",
-            "subtract": "Вимкнено",
-            "transactions": "Витрати",
-            "voucher": "Роздрукуйте свій кредит або надішліть його поштою. Віднесіть QR-код постачальнику послуг і відскануйте його."
+            "offices": "Провайдери"
         },
         "physical_card": {
             "buttons": {
@@ -3367,15 +3317,7 @@
             },
             "card_number": "Номер пропуску",
             "title": "Активуйте мій пропуск",
-            "less_details": "Приховати всі деталі",
-            "more_details": "Показати всі деталі",
-            "personal_date": "Персональні дані",
             "alt": "Фізична перепустка: '{{ title }}'"
-        },
-        "reimbursement": {
-            "button": "Надіслати купон",
-            "description": "Відшкодуйте понесені витрати, надіславши детальну інформацію про покупку, а також рахунок або чек.",
-            "title": "Відшкодування витрат"
         },
         "share_voucher": {
             "buttons": {
@@ -3410,25 +3352,6 @@
             "title": "Транзакції",
             "top_up": "Оновлений",
             "expired_on": "Термін дії закінчився {{ date }}"
-        },
-        "card_combined": {
-            "header": {
-                "title": "Як це працює?"
-            },
-            "labels": {
-                "contact_sponsor": "Є питання?",
-                "contact_sponsor_details": "Тоді зв'яжіться з нами.",
-                "how_it_works": "Ми отримали вашу заяву. Ви отримаєте рішення по вашій заяві протягом 8 тижнів.",
-                "IIT": {
-                    "how_it_works": "Ми отримали вашу заяву. Ви отримаєте рішення по вашій заяві протягом 8 тижнів.",
-                    "redirect_to": "Ви все ще хочете подати заявку на відшкодування?"
-                },
-                "meedoenregeling_volwassenen_ww": {
-                    "how_it_works": "Ви понесли витрати, які підпадають під цю схему? Вимагайте відшкодування витрат, надавши квитанцію. Після схвалення ви отримаєте суму на свій особистий банківський рахунок.",
-                    "redirect_to": "Витрати на відшкодування?"
-                },
-                "redirect_to": "Ви все ще хочете подати заявку на відшкодування?"
-            }
         },
         "actions": {
             "choose_action": {
